card img stretched issue fixed

--- a/src/css/InfiniteSlider.module.css
+++ b/src/css/InfiniteSlider.module.css
@@ -22,5 +22,6 @@
 }
 
 img.cardImg{
-    height: 473px;
+    height: auto;
+    width: auto;
 }
